--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "configs",
     "version": "1.0.1",
     "description": "",
-    "type": "commonjs",
+    "type": "module",
     "main": "index.js",
     "scripts": {},
     "keywords": [],
