--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "configs",
+    "name": "@ffTsuzuku/configs",
     "version": "1.0.2",
     "description": "",
     "type": "module",
