--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@ffTsuzuku/configs",
+    "name": "@ffTsuzuku/eslint-config",
     "version": "1.0.2",
     "description": "",
     "type": "module",
@@ -7,5 +7,8 @@
     "scripts": {},
     "keywords": [],
     "author": "",
-    "license": "ISC"
+    "license": "ISC",
+    "peerDependencies": {
+        "eslint": ">= 3"
+    }
 }
